fix image stretching for phone size

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -290,6 +290,7 @@ img {
   height: auto;
   max-width: 100%;
   align-content: center;
+  object-fit: contain;
 }
 
 @media screen and (max-width: 800px) {
